--- a/style.css
+++ b/style.css
@@ -263,7 +263,6 @@
   padding-bottom: 20px;
   padding-left: 20px;
 }
-.img-card-1 {background-image: url(/img/card-1.png);}
 
 .btn-time {
   background-color: #fff;
@@ -305,7 +304,7 @@
   line-height: 1.7;
   letter-spacing: 0.5px;
 }
-.footer{
+.footer {
   background-color: #f5f6f8;
   padding: 60px 0;
 }
@@ -353,7 +352,101 @@
   letter-spacing: 0.5px;
   color: #91919b;
 }
-
+.mob-btn{
+  display: none;
+}
+.img-card-1 {background-image: url(/img/card-1.png);}
 .img-card-2 {background-image: url(/img/card-2.png);}
 .img-card-3 {background-image: url(/img/card-3.png);}
 .img-card-4 {background-image: url(/img/card-4.png);}
+
+@media (max-width: 1120px) {
+  .container {
+    padding: 0 20px;
+  }
+}
+
+@media (max-width: 992px) {
+  .header-info-block{
+    flex-direction: column;
+  }
+  .card-about{
+    align-self: flex-end;
+    margin-top: 60px;
+  }
+  .audio-container{
+    order: -1;
+  }
+  .course-row{
+    flex-wrap: wrap;
+    margin-bottom: 0;
+  }
+  .course-card{
+    display: flex;
+    margin-bottom: 60px;
+  }
+  .card-big, .card-small{
+    width: 100%;
+  }
+  .img-container, .info-container{
+    width: 50%;
+  }
+  .img-card-1, .img-card-3{
+    margin-right: 40px;
+  }
+  .img-card-2, .img-card-4{
+    order: 2;
+    margin-left: 40px;
+  }
+}
+
+@media (max-width: 756px) {
+  .course-card{
+    flex-direction: column;
+  }
+  .img-card-1, .img-card-3, .img-card-2, .img-card-4{
+    margin: 0;
+  }
+  .img-container, .info-container{
+    width: 100%;
+  }
+  .img-card-2, .img-card-4{
+    order: -1;
+  }
+}
+
+@media (max-width: 578px) {
+  .navigation-holder{
+    display: none;
+  }
+  .mob-btn{
+    display: inline-block;
+    text-decoration: none;
+    font-size: 60px;
+    color: #fff;
+  }
+  .header-title-text{
+    font-size: 60px;
+  }
+  .join{
+    display: none;
+  }
+  .card-info-img{
+    max-width: 100%;
+  }
+  .audio-holder, .card-about{
+    width: 100%;
+  }
+  .audio-block img{
+    display: none;
+  }
+  .audio-container{
+    padding: 0 42px 0 0;
+  }
+  .control i {
+    height: 48px;
+  }
+  .course-name{
+    font-size: 24px;
+  }
+}
