--- a/style.css
+++ b/style.css
@@ -355,10 +355,10 @@
 .mob-btn{
   display: none;
 }
-.img-card-1 {background-image: url(/img/card-1.png);}
-.img-card-2 {background-image: url(/img/card-2.png);}
-.img-card-3 {background-image: url(/img/card-3.png);}
-.img-card-4 {background-image: url(/img/card-4.png);}
+.img-card-1 {background-image: url(./img/card-1.png);}
+.img-card-2 {background-image: url(./img/card-2.png);}
+.img-card-3 {background-image: url(./img/card-3.png);}
+.img-card-4 {background-image: url(./img/card-4.png);}
 
 @media (max-width: 1120px) {
   .container {
